# Xploator

./: CMakeLists.txt  README.md
.cache/clangd/index/: client.cpp.E11991F9DED45194.idx  main.cpp.0B4D025E1072C0D6.idx  scrapper.cpp.26B40B4A59FF6122.idx  scrapper.h.A6C1A79522B622FC.idx  server.cpp.BEFAF0FE54D8644B.idx  utils.cpp.AF1118F7647DA829.idx  utils.cpp.AF8DCEAEC06E85A7.idx  utils.h.4307A7880AF6BCB9.idx  utils.h.EDCCEB2CCBBD6E6F.idx
include/: scrapper.h  utils.h
src/: client.cpp  main.cpp  scrapper.cpp  server.cpp  utils.cpp
